--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT = 4000
+MONGO_URI=mongodb+srv://rgcricket518:Rohit2000@cluster0.uivxlf9.mongodb.net/?retryWrites=true&w=majority
+
+JWT_SECRET="akld;fja;sldkfj"
