--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL = https://chat-app-gth2.onrender.com
+REACT_APP_BASE_URL = http://chat-app-gth2.onrender.com
+# REACT_APP_BASE_URL = http://localhost:4000
